# -

./: CMakeLists.txt  et --hard 0564d98  sdkconfig  sdkconfig.old
KODEKEDUA/code/: code.ino
main/: CMakeLists.txt  app_main.cpp
model/: Activity_coefficient.cpp  Activity_coefficient.hpp
model_deployment/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
model_deployment/components/arduino/: .gitignore
model_deployment/components/arduino/cores/esp32/: IPAddress.h
model_deployment/components/heart/: CMakeLists.txt  PulseSensorPlayground.cpp  PulseSensorPlayground.h  PulseSensorSerialOutput.h
model_deployment/components/heart/utility/: PulseSensor.h  PulseSensorTimingStatistics.h
model_deployment/main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  idf_component.yml
new/: requirements.txt
new/app/: .env  main.py
new/app/templates/: dashboard.html  login_register.html
web/: docker-compose.yml  init.js
web/backend/: Dockerfile  main.py  requirements.txt
web/mongo-seed/: Dockerfile  hospitals.json
web/tsyp/: Dockerfile  package-lock.json
web/tsyp/app/(main)/dashboard/: page.tsx
web/tsyp/components/: userAuth.tsx  userSignin.tsx
web/tsyp/components/dashboard/: dashboard.tsx
web/tsyp/components/doctorDashboard/: doctordashborad.tsx
web/tsyp/components/doctors/: doctors.tsx
web/tsyp/public/: sw.js.map
